--- a/_posts/2015-6-4-杂记150604.md
+++ b/_posts/2015-6-4-杂记150604.md
@@ -3,7 +3,7 @@ layout: post
 title: 杂记0604
 description: "杂谈 "
 category: other
-tags: [日记，verilog]
+tags: [日记,verilog]
 imagefeature: 
 comments: true
 share: true
