--- a/_posts/2015-8-21-Lex和Yacc.md
+++ b/_posts/2015-8-21-Lex和Yacc.md
@@ -3,7 +3,7 @@ layout: post
 title: Lex和Yacc
 description: "编译器 "
 category: tech
-tags: [编译器，解释器]
+tags: [编译器,解释器]
 imagefeature: 
 comments: true
 share: true
