--- a/_posts/2018-11-3-PGX.md
+++ b/_posts/2018-11-3-PGX.md
@@ -2,7 +2,7 @@
 layout: post
 title: PGX 项目流水账
 description: "记录我在 PGX 项目开发期间的日子"
-category: 
+category: other
 tags: [游戏开发, 记录]
 imagefeature: 
 comments: true
