--- a/_posts/2018-11-3-PGX.md
+++ b/_posts/2018-11-3-PGX.md
@@ -10,6 +10,8 @@ share: true
 ---
 最近由于一些不可抗力，手头的工作闲下来了，正好写一点这个阶段的总结。首先就从这个我基本上从头开始参与的，并且有可能送终的游戏开发过程讲起吧。之后会开始写一些这个项目开发中用到和学到的东西。
 
+## 事先声明，本文禁止一切转载
+
 <!--more-->
 * 18-11-03 写到哪里算哪里
 ## 目录
