Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_posts/2018-11-3-引擎文章计划.md
+++ b/_posts/2018-11-3-引擎文章计划.md
@@ -20,9 +20,40 @@ share: true
 
 先打算记录一下由我本人在引擎工作期间直接完成的一些工作
 
+__IK__ 
+
+这个其实比较水了，实现算法难度不大，用的是 FABRIK，落地不是我做的，这一块可能反而会比较麻烦
+
+
+__打包 slimsvn__
+
+这个给端游做的资源处理和发布工具其实类似于中心化的 Unity 的 Cache Server，算是一个 CI/CD 的东西了，因为是基于旧的流程改造的，有很多为了兼容做的妥协，希望以后有机会从头做一个更完美的。
+
+__模型与物理导出插件__
+
+这是一个给引擎适配的美术pipeline的工具链，整体思路是让美术在Max里面把模型和材质根据规定命名，然后转换到fbx，再由工具根据命名转换到引擎需要的数据格式，有效解决了物理材质的问题，我觉得很有意义，但是和美术打交道是真的不容易。
+
+__反外挂__
+
+这一块没什么好讲的，学习了常见的外挂代码（别问哪来的），其实就是扫描指针，不停的往上层扫，直到静态区，所以做了个naive的应对策略，把存着的指针都加个密，用到了才解密，恶心一下他们。结果 BigWorld 源码早泄露了，其实基本没什么防御手段的。还是要靠反外挂SDK那边来正面刚。
+
+
+
 ## 第二部分，实用 Seminar
 
 引擎这里开的Seminar不少都是已经实现或者准备实现的技术，相比于单纯的paper或者talk要深刻的多，所以第二部分就讲讲大佬们在引擎上面实现的牛逼技术
+
+__Reverse Z__
+
+做超远视距处理 `z fighting` 必备的技术，因为 clip space 里面深度是 * 1/Z 的，所以与Z非线性导致远处精度不足，以及浮点越大精度越低，那么把 near 和 far 调换一下，刚好把非线性导致的精度低的部分和浮点导致精度高的合一起，两边互相抵消，再配合增加depth定点的精度（D24）就好了
+
+__32层地表__
+
+先给32张不同类型的地表贴图，设定好tiling，然后让美术去地表刷一张matid图，上面记录一个点（一米）是采32层哪一个类型的地表，shading的时候做手动双线性，采周围四个点的 matid ，然后分别采32层，最后用双线性 blend 在一起。配合高度图还能做 height blend，具体没详细研究。
+
+正在做的virtual texture就是把采样放到 VT page bake 的时候去做，顺便还能放贴花上去，shading的时候直接采一下就好了。具体看 far cry4 的 procedure virtual texture talk。
+
+
 
 ## 第三部分，未来展望
 
