Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_posts/2018-11-3-引擎文章计划.md
+++ b/_posts/2018-11-3-引擎文章计划.md
@@ -22,12 +22,20 @@ share: true
 
 __IK__ 
 
-这个其实比较水了，实现算法难度不大，用的是 FABRIK，落地不是我做的，这一块可能反而会比较麻烦
+这个其实比较水了，实现算法难度不大，用的是 FABRIK，实现了一个库配套一个demo，游戏内落地不是我做的，这一块可能反而会比较麻烦
 
 
 __打包 slimsvn__
 
 这个给端游做的资源处理和发布工具其实类似于中心化的 Unity 的 Cache Server，算是一个 CI/CD 的东西了，因为是基于旧的流程改造的，有很多为了兼容做的妥协，希望以后有机会从头做一个更完美的。
+
+性能提升：由原来 `30分钟 - 2个小时` 的打包发布时间，降到 `30分钟` 以内。
+提升主要依赖于：
+1. 将原来基于本地文件修改时间和md5的判断增量更新方法，改为通过比较 svn 更新记录，大幅度减少磁盘 IO 的开销 （约 30 分钟）
+2. 将原先在打包时进行的贴图转换压缩过程，通过 CI 的方式在资源上传的时候提前完成，将 CPU 开销分摊到平时 （约 30 分钟），提前压缩还可以减少打包时从网络下载的文件大小。
+3. 利用 btrfs 的 COW 功能，减少生成 diff 时文件复制的 IO 和磁盘空间开销
+4. 接入 Jenkins 作为用户交互前端，轻松接入各个自动化流程
+
 
 __模型与物理导出插件__
 
